--- a/index.html
+++ b/index.html
@@ -29,12 +29,22 @@
       </main>
 
       <footer>
-        This AI project was coded by Khaindi and is<a href="https://github.com/HAINDI/poem-generator">
-       open-sourced on GitHub</a>
-        and is hosted on Netlify
+        This AI project was coded by
+        <a href="https://github.com/matthieua/" target="_blank">Matt Delac</a>
+        and is
+        <a
+          href="https://github.com/shecodesio/french-poem-generator"
+          target="_blank"
+        >
+          open-sourced on GitHub</a
+        >
+        and is hosted on Netlify</a
+        >
+        <script src="script.js"></script>
       </footer>
     </div>
+    
 
-    <script src="index.js"></script>
+    
   </body>
 </html>
