--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/marked/marked.min.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>AI French Poem Generator</title>
   </head>
@@ -22,6 +24,7 @@
             required
             autocomplete="off"
             class="instructions"
+            id="user-instructions"
           />
           <input type="submit" class="button" />
         </form>
@@ -29,8 +32,7 @@
       </main>
 
       <footer>
-        This AI project was coded by
-        <a href="https://github.com/matthieua/" target="_blank">Matt Delac</a>
+        This AI project was coded by Khaindi<a href="https://github.com/HAINDI/poem-generator" target="_blank"></a>
         and is
         <a
           href="https://github.com/shecodesio/french-poem-generator"
