--- a/index.html
+++ b/index.html
@@ -32,18 +32,13 @@
       </main>
 
       <footer>
-        This AI project was coded by Khaindi<a href="https://github.com/HAINDI/poem-generator" target="_blank"></a>
-        and is
-        <a
-          href="https://github.com/shecodesio/french-poem-generator"
-          target="_blank"
-        >
-          open-sourced on GitHub</a
-        >
-        and is hosted on Netlify</a
-        >
-        <script src="script.js"></script>
-      </footer>
+  This AI project was coded by Khaindi,
+  <a href="https://github.com/HAINDI/poem-generator" target="_blank">
+    is open-sourced on GitHub
+  </a>
+  and is hosted on Netlify.
+  <script src="script.js"></script>
+</footer>
     </div>
     
 
