added index.html file with new content

--- a/index.html
+++ b/index.html
@@ -33,15 +33,12 @@
 
       <footer>
   This AI project was coded by Khaindi,
-  <a href="https://github.com/HAINDI/poem-generator" target="_blank">
+  <a href="https://github.com/HAINDI/poem-generator" target="_blank" rel="noopener noreferrer">
     is open-sourced on GitHub
-  </a>
-  and is hosted on Netlify.
-  <script src="script.js"></script>
+  </a> and is hosted on Netlify.
 </footer>
     </div>
     
-
-    
+    <script src="script.js"></script>
   </body>
 </html>
